# isobarcpp

./: .gitmodules  CMakeLists.txt  Chord.h  Key.h  Note.h  Pattern.h  README.md  Scale.h  Sequence.h  Timeline.h  main.cpp
tests/: main.cpp  test_chord.h  test_keys.h
